[gd_scene load_steps=4 format=3 uid="uid://djlmk5a6dk6ge"]

[ext_resource type="Script" uid="uid://igkat1gkk26b" path="res://project/menus/components/save_slot/save_slot.gd" id="2"]

[sub_resource type="Animation" id="2"]
resource_name = "hover"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Panel/Border/Image:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Panel/Border/Image:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.901961, 0.72549, 0.960784, 0.556863), Color(1, 1, 1, 0.72549)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_du3te"]
_data = {
&"hover": SubResource("2")
}

[node name="SaveSlot" type="MarginContainer"]
offset_right = 102.0
offset_bottom = 105.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Savename"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"
flat = true

[node name="Panel" type="Panel" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(160, 90)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1

[node name="Border" type="Control" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Image" type="TextureRect" parent="VBoxContainer/Panel/Border"]
modulate = Color(0.901961, 0.72549, 0.960784, 0.556863)
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_right = 75.0
offset_bottom = 75.0
expand_mode = 5
stretch_mode = 4

[node name="Datetime" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="hoveranims" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_du3te")
}

[connection signal="gui_input" from="." to="." method="_on_SaveSlot_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_SaveSlot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SaveSlot_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_Delete_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_Delete_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
